
name:                wai-middleware-hmac-client
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Christopher Reichert
maintainer:          creichert07@gmail.com
copyright:           (c) 2015, Christopher Reichert
category:            Web
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/creichert/wai-middleware-hmac
synopsis:            Wai HMAC Authentication Middleware Client
description:
 .
 Ready to use client module for wai-middleware-hmac. This module is
 built on http-client but is in the Wai namespace since the protocol
 is somewhat specific. Although this implementation does follow the
 RFC as closely as possible as well as Amazon AWS's implementation.
 However, since nothing is formally specified these modules are
 specifically built for each other.  Because of this, we also try to
 maintain a slim dependency profile.


source-repository head
  type:     git
  location: git://github.com/creichert/wai-middleware-hmac-client


library
  exposed-modules:     Network.Wai.Middleware.HmacAuth.Client
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-binds
  build-depends:       base == 4.*
                     , bytestring        >= 0.10
                     , http-types        >= 0.8
                     , http-client
                     , base64-bytestring >= 1.0
                     , word8             >= 0.1
                     , case-insensitive
                     , cryptohash
                     , byteable
                     , mtl
                     , time
                     , old-locale
                     , transformers



executable example
  buildable: False
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -threaded
  main-is:          Example.hs
  hs-source-dirs:   ""
  build-depends:    base
                  , bytestring
                  , transformers
                  , http-client
                  , wai-middleware-hmac-client
